# vyatta-cfg-dhcp-server

./: .frlog  .gitignore  COPYING  Makefile.am  README  configure.ac  gen-templates.pl
debian/: README  changelog  control  copyright  lintian  rules
scripts/system/: dhcpd-config.pl  dhcpd.init  dhcpd.init.in  dhcpdv6-config.pl  dhcpdv6.init  on-dhcp-event.sh
src/: templates.in
templates/service/dhcp-server/: node.def
templates/service/dhcp-server/disabled/: node.def
templates/service/dhcp-server/dynamic-dns-update/: node.def
templates/service/dhcp-server/dynamic-dns-update/enable/: node.def
templates/service/dhcp-server/enable-hostfile-update/: node.def
templates/service/dhcp-server/global-parameters/: node.def
templates/service/dhcp-server/hostfile-update/: node.def
templates/service/dhcp-server/shared-network-name/: node.def
templates/service/dhcp-server/shared-network-name/node.tag/authoritative/: node.def
templates/service/dhcp-server/shared-network-name/node.tag/description/: node.def
templates/service/dhcp-server/shared-network-name/node.tag/disable/: node.def
templates/service/dhcp-server/shared-network-name/node.tag/shared-network-parameters/: node.def
templates/service/dhcp-server/shared-network-name/node.tag/subnet/: node.def
templates/service/dhcp-server/shared-network-name/node.tag/subnet/node.tag/authoritative/: node.def
templates/service/dhcp-server/shared-network-name/node.tag/subnet/node.tag/bootfile-name/: node.def
templates/service/dhcp-server/shared-network-name/node.tag/subnet/node.tag/bootfile-server/: node.def
(+42 files in other folders)
